--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Slider -->
     <div id="slider">
-        <p class="slider-heading text-center">the<br>Cafe</p>
+        <p class="slider-heading text-center">The Coffee Shop</p>
         <div class="slider-open"><p>Open from 6am to 5pm</p></div>
         <div class="slider-address"><p>15 Adr street, 5015</p></div>
     </div>
