--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./asset/css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <title>The Coffee</title>
+    <title>THE COFFEE SHOP</title>
 </head>
 <body>
     <!-- Header -->
